syntax = "proto3";

package calc;

message MyRequest {
    enum Type {
        ADDITION = 0;
        SUBSTRACTION = 1;
        MULTIPLICATION = 2;
        DIVISION = 3;
    }

    Type type = 1;
    int64 operandeA = 2;
    int64 operandeB = 3;
}

message MyResponse {
    int64 result = 1;
}

service Calc {
    rpc Operation (MyRequest) returns (MyResponse) {
    }
}

